--- a/mainLogado.html
+++ b/mainLogado.html
@@ -48,11 +48,11 @@
       </div>
       <div class="slider">
         <a href="#produtos"
-          ><img src="./img/IconeSite.png" alt="" class="img2"
+          ><img src="./img/Rectangle 169.png" alt="" class="img2"
         /></a>
       </div>
       <div class="slider">
-        <a href="#produtos"><img src="img/imgFundo.png" alt="" /></a>
+        <a href="#produtos"><img src="img/image 31.png" alt="" /></a>
       </div>
       <div class="slider">
         <a href="#produtos"><img src="img/IconeSite.png" alt="" /></a>
