--- a/main.html
+++ b/main.html
@@ -19,25 +19,27 @@
     <nav class="nav-menu">
       <div class="direita-nav">
         <div class="loginBtn">
-          <a href="login.html" class="login"
-          ><i class="fa-solid fa-right-to-bracket"></i>
-          <p>Login</p></a
-        >
+          <a href="login.html" class="login">
+            <i class="fa-solid fa-right-to-bracket"></i>
+            <p>Login</p>
+          </a>
         </div>
         <div class="perfil-sair">
           <a href="#"><i class="fa-solid fa-user"></i>Perfil</a>
           <span></span>
-          <a href="main.html"><i class="fa-solid fa-right-from-bracket"></i>Sair</a>
+          <a href="main.html"
+            ><i class="fa-solid fa-right-from-bracket"></i>Sair</a
+          >
         </div>
       </div>
       <div class="barraResponsiva">
         <div class="barra">
-          <input type="text" name="barraP" id="barraP" class="barraP" />
-          <a href=""><i class="fab fa-sistrix"></i></a>
+          <input type="text" name="barraP" id="barraP" class="barraP" placeholder="Pesquise Aqui"/>
         </div>
       </div>
       <div class="esquerda-nav">
         <a href="#"><i class="fas fa-cart-shopping" id="cart"></i></a>
+        <a href="#"><i class="fas fa-user"></i></a>
         <img src="img/IconeSite.png" alt="ícone do site" class="iconeSite" />
       </div>
     </nav>
@@ -45,7 +47,7 @@
       <li><a href="#">HOME</a></li>
       <li><a href="#">PRODUTOS</a></li>
       <li><a href="#">GALERIA</a></li>
-      <li><a href="#">CONTATE-NOS</a></li>
+      <li><a href="#">CONTATO</a></li>
     </ul>
     <div class="container-slider">
       <i class="fa fa-circle-arrow-left next"></i>
@@ -54,20 +56,16 @@
       </div>
       <div class="slider">
         <a href="#produtos"
-          ><img src="./img/IconeSite.png" alt="" class="img2"
+          ><img src="./img/Rectangle 169.png" alt="" class="img2"
         /></a>
       </div>
       <div class="slider">
-        <a href="#produtos"><img src="img/imgFundo.png" alt="" /></a>
-      </div>
-      <div class="slider">
-        <a href="#produtos"><img src="img/IconeSite.png" alt="" /></a>
+        <a href="#produtos"><img src="img/image 31.png" alt="" /></a>
       </div>
       <i class="fa fa-circle-arrow-right next"></i>
     </div>
     <div class="bolinhas">
       <div class="pontos active" id="pontos"></div>
-      <div class="pontos" id="pontos"></div>
       <div class="pontos" id="pontos"></div>
       <div class="pontos" id="pontos"></div>
     </div>
@@ -86,21 +84,20 @@
       <i class="fa-solid fa-tag"></i>
     </div>
     <div class="box">
-      
       <div class="glass coleira">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 25.png" /></a>
       </div>
       <div class="glass pl">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 27.png" /></a>
       </div>
       <div class="glass pl">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 26.png" /></a>
       </div>
       <div class="glass pl">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 28.png" /></a>
       </div>
     </div>
