--- a/main.html
+++ b/main.html
@@ -32,22 +32,27 @@
           >
         </div>
       </div>
+      <!-- <nav class="menuResponsivo"> -->
+        <i class="fas fa-bars menuH" id="menuH"></i>
       <div class="barraResponsiva">
         <div class="barra">
-          <input type="text" name="barraP" id="barraP" class="barraP" placeholder="Pesquise Aqui"/>
+          <input type="text" name="barraP" id="barraP" class="barraP" placeholder="Pesquise Aqui !"/>
         </div>
       </div>
+      <i class="fa fa-user bonecoUser"></i>
+      <i class="fa fa-cart-shopping carrinho"></i>
       <div class="esquerda-nav">
         <a href="#"><i class="fas fa-cart-shopping" id="cart"></i></a>
-        <a href="#"><i class="fas fa-user"></i></a>
+        
         <img src="img/IconeSite.png" alt="ícone do site" class="iconeSite" />
       </div>
+      <!-- </nav> -->
     </nav>
     <ul class="itens-menu">
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">PRODUTOS</a></li>
-      <li><a href="#">GALERIA</a></li>
-      <li><a href="#">CONTATO</a></li>
+      <li class="li1"><a href="#">HOME</a></li>
+      <li class="li1"><a href="#">PRODUTOS</a></li>
+      <li class="li1"><a href="#">GALERIA</a></li>
+      <li class="li1"><a href="#">CONTATO</a></li>
     </ul>
     <div class="container-slider">
       <i class="fa fa-circle-arrow-left next"></i>
@@ -130,7 +135,6 @@
         <a href="#"><i class="fa-solid fa-circle-plus"></i></a>
       </div>
     </div>
-    <script src="js/script.js"></script>
     <div class="rodape">
       <p>Siga-nos em nossas redes sociais!!</p>
       <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
@@ -141,5 +145,6 @@
       <a href="#"><i class="fa-brands fa-telegram"></i></a>
       <a href="#"><i class="fa-brands fa-skype"></i></a>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
