--- a/mainLogado.html
+++ b/mainLogado.html
@@ -24,6 +24,7 @@
           <a href="main.html"><i class="fa-solid fa-right-from-bracket"></i>Sair</a>
         </div>
       </div>
+      <i class="fas fa-bars menuH" id="menuH"></i>
       <div class="barraResponsiva">
         <div class="barra">
           <input type="text" name="barraP" id="barraP" class="barraP" />
