--- a/main.html
+++ b/main.html
@@ -40,6 +40,12 @@
         </div>
       </div>
       <i class="fa fa-user bonecoUser"></i>
+      <div class="menu-Lateral">
+        <a href="main.html"
+            ><i class="fa-solid fa-right-to-bracket"></i></a
+          >
+        <a href="login.html"><i class="fa-solid fa-right-from-bracket"></i></a>
+      </div>
       <i class="fa fa-cart-shopping carrinho"></i>
       <div class="esquerda-nav">
         <a href="#"><i class="fas fa-cart-shopping" id="cart"></i></a>
