--- a/mainLogado.html
+++ b/mainLogado.html
@@ -18,29 +18,42 @@
     <p class="fraseCima">Sou + Pet</p>
     <nav class="nav-menu">
       <div class="direita-nav">
+        <div class="loginBtn">
+        </div>
         <div class="perfil-sair">
           <a href="#"><i class="fa-solid fa-user"></i>Perfil</a>
           <span></span>
-          <a href="main.html"><i class="fa-solid fa-right-from-bracket"></i>Sair</a>
+          <a href="main.html"
+            ><i class="fa-solid fa-right-from-bracket"></i>Sair</a
+          >
         </div>
       </div>
-      <i class="fas fa-bars menuH" id="menuH"></i>
+      <!-- <nav class="menuResponsivo"> -->
+        <i class="fas fa-bars menuH" id="menuH"></i>
       <div class="barraResponsiva">
         <div class="barra">
-          <input type="text" name="barraP" id="barraP" class="barraP" />
-          <a href=""><i class="fab fa-sistrix"></i></a>
+          <input type="text" name="barraP" id="barraP" class="barraP" placeholder="Pesquise Aqui !"/>
         </div>
       </div>
+      <i class="fa fa-user bonecoUser"></i>
+      <div class="menu-Lateral">
+        <a href="main.html"
+            ><i class="fa-solid fa-right-to-bracket"></i></a
+          >
+      </div>
+      <i class="fa fa-cart-shopping carrinho"></i>
       <div class="esquerda-nav">
         <a href="#"><i class="fas fa-cart-shopping" id="cart"></i></a>
+        
         <img src="img/IconeSite.png" alt="ícone do site" class="iconeSite" />
       </div>
+      <!-- </nav> -->
     </nav>
     <ul class="itens-menu">
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">PRODUTOS</a></li>
-      <li><a href="#">GALERIA</a></li>
-      <li><a href="#">CONTATE-NOS</a></li>
+      <li class="li1"><a href="#">HOME</a></li>
+      <li class="li1"><a href="#">PRODUTOS</a></li>
+      <li class="li1"><a href="#">GALERIA</a></li>
+      <li class="li1"><a href="#">CONTATO</a></li>
     </ul>
     <div class="container-slider">
       <i class="fa fa-circle-arrow-left next"></i>
@@ -55,14 +68,10 @@
       <div class="slider">
         <a href="#produtos"><img src="img/image 31.png" alt="" /></a>
       </div>
-      <div class="slider">
-        <a href="#produtos"><img src="img/IconeSite.png" alt="" /></a>
-      </div>
       <i class="fa fa-circle-arrow-right next"></i>
     </div>
     <div class="bolinhas">
       <div class="pontos active" id="pontos"></div>
-      <div class="pontos" id="pontos"></div>
       <div class="pontos" id="pontos"></div>
       <div class="pontos" id="pontos"></div>
     </div>
@@ -81,21 +90,20 @@
       <i class="fa-solid fa-tag"></i>
     </div>
     <div class="box">
-      
       <div class="glass coleira">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 25.png" /></a>
       </div>
       <div class="glass pl">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 27.png" /></a>
       </div>
       <div class="glass pl">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 26.png" /></a>
       </div>
       <div class="glass pl">
-        <img class="promocao" src="img/percentual Img.png" alt="">
+        <img class="promocao" src="img/percentual Img.png" alt="" />
         <a href="#"><img src="img/image 28.png" /></a>
       </div>
     </div>
@@ -128,7 +136,6 @@
         <a href="#"><i class="fa-solid fa-circle-plus"></i></a>
       </div>
     </div>
-    <script src="js/script.js"></script>
     <div class="rodape">
       <p>Siga-nos em nossas redes sociais!!</p>
       <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
@@ -139,5 +146,6 @@
       <a href="#"><i class="fa-brands fa-telegram"></i></a>
       <a href="#"><i class="fa-brands fa-skype"></i></a>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
