--- a/mainLogadoAdmin.html
+++ b/mainLogadoAdmin.html
@@ -19,12 +19,6 @@
     <p class="fraseCima">Página de Administração</p>
     <nav class="nav-menu">
       <div class="direita-nav">
-        <!-- <div class="loginBtn">
-          <a href="login.html" class="login">
-            <i class="fa-solid fa-right-to-bracket"></i>
-            <p>Login</p>
-          </a>
-        </div> -->
         <div class="perfil-sair">
           <a href="#"><i class="fa-solid fa-user"></i>Perfil</a>
           <span></span>
@@ -41,27 +35,17 @@
         </div>
     </nav>
     <ul class="itens-menu admNavegar">
-        <li><a href="#" id="lucros" class="lucros">Lucros</a></li>
-        <li><a href="#" id="resultados">Resultados</a></li>
-        <li><a href="#" id="acessos">Acessos</a></li>
+        <li id="lucros" class="lucro box2">Contato</li>
       </ul>
-    <div class="container">
-        <div class="active">
-            <h2 class="inicio">Inicio: 10/01/2023</h2>
-            <div class="vendas-total">
-                <h3 class="vendas">Vendas: 809</h3>
-                <h3 class="total">Total: R$47.564.80</h3>
-            </div>
-        </div>
-    </div>
-    <div class="resultados">
-        <h3 class="vendasRe">Vendas do Mes: 150</h3>
-        <h3 class="visu">Visualizações de itens: 11.405</h3>
-    </div>
-    <div class="acessos">
-        <h3>Acessos diarios:439</h3>
-        <h3>Acessos mensais:895</h3>
-    </div>
-    <script src="js/scriptAdmin.js"></script>
+      <table class="myTables" id="myTable" border="1">
+        <tr>
+            <td>Data/Hora</td>
+            <td>Nome</td>
+            <td>E-Mail</td>
+            <td>Assunto</td>
+            <td>Mensagem</td>
+        </tr>
+    </table>
+   <script src="js/scriptAdmin.js"></script>
   </body>
 </html>
