--- a/mainLogadoAdmin.html
+++ b/mainLogadoAdmin.html
@@ -30,12 +30,15 @@
       <i class="fas fa-bars menuH" id="menuH"></i>
       </div>
       <i class="fa fa-user bonecoUser"></i>
+      <a href="main.html"
+            ><i class="fa-solid fa-right-from-bracket bonecoUser"></i></a
+          >
       <div class="esquerda-nav">
           <img src="img/IconeSite.png" alt="ícone do site" class="iconeSite" />
         </div>
     </nav>
     <ul class="itens-menu admNavegar">
-        <li id="lucros" class="lucro box2">Contato</li>
+        <li id="lucros" class="lucro box2">Contatos</li>
       </ul>
       <table class="myTables" id="myTable" border="1">
         <tr>
